65-77 регулярные выражения, калькулятор коллорий на сайте, геттеры сеттер, инкапсуляция _  и # , современные фреймоврки

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/SevaPHP/LandingPage#readme",
   "devDependencies": {
     "json-server": "^0.16.3"
+  },
+  "dependencies": {
+    "jshint": "^2.13.0"
   }
 }
